# ImageManager

./: CMakeLists.txt  ImagePreview.cpp  ImagePreview.h  README.md  cmake_install.cmake  imagepreview.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
resources/: resources.qrc
